--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Inteligência Brasil" />
+  <meta property="og:site_name" content="Eu Sempre Quero Mais" />
   <meta property="og:site" content="https://eusemprequeromais.com.br" />
   <meta property="og:title" content=".:Eu Sempre Quero Mais:. - Os melhores infoprodutos e trilhas de conhecimento você só encontra aqui!" />
   <meta property="og:description" content="Somos uma consultoria com objetivo de auxiliar pessoas com sede de conhecimento e vontade de aprender assuntos e habilidades novas através de infoprodutos com aulas e metodologias para construção de aprendizado sólido com exclência." />
@@ -81,7 +81,7 @@
         na era atual. E nós estamos aqui pra facilitar sua busca pelo conhecimento.
         .</h6>
       <div>
-        <button class="btn btn-opacity-light mr-1">Quero mais...</button>
+        <button class="btn btn-opacity-light mr-1">Quero + </button>
         <button class="btn btn-opacity-success ml-1">Vamos?</button>
       </div>
       <img src="images/Group171.svg" alt="" class="img-fluid">
